fix: adjusted app title to correct spelling

--- a/frontend/barks-and-bubbles-frontend/src/index.html
+++ b/frontend/barks-and-bubbles-frontend/src/index.html
@@ -3,7 +3,7 @@
 
       <head>
             <meta charset="utf-8">
-            <title>Barks and Bubbles Tracker</title>
+            <title>Barks & Bubbles</title>
             <base href="/">
             <meta name="viewport"
                   content="width=device-width, initial-scale=1">
