--- a/frontend/barks-and-bubbles-frontend/src/index.html
+++ b/frontend/barks-and-bubbles-frontend/src/index.html
@@ -40,5 +40,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
               integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
               crossorigin="anonymous"></script>
+      <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
 
 </html>
